# rag-pipeline-systematic-evals

./: .gitignore  .pre-commit-config.yaml  BLOG.md  ITERATIONS.md  Makefile  README.md  blog_Systematic_RAG_Evaluation.md  pyproject.toml  rag_pipeline_systematic_evals.md
.github/workflows/: ci.yml
data/embed_cache/large/: sentence_5s_ol1.pkl
data/embed_cache/small/: fixed_512_ol100.pkl  semantic_t0.65_max10.pkl  sentence_5s_ol1.pkl
data/qa_datasets/: fixed_256_ol50.json  fixed_512_ol100.json  semantic_t0.65_max10.json  sentence_5s_ol1.json
docs/: blog_post.md  engineering.md  failures.md  methodology.md  setup.md  tradeoffs.md
experiments/: fixed_256_ol50__large__bm25.json  fixed_256_ol50__large__hybrid_a0.5.json  fixed_256_ol50__large__vector.json  fixed_256_ol50__small__bm25.json  fixed_256_ol50__small__hybrid_a0.5.json  fixed_256_ol50__small__vector.json  fixed_512_ol100__large__bm25.json  fixed_512_ol100__large__hybrid_a0.5.json  fixed_512_ol100__large__vector.json  fixed_512_ol100__small__bm25.json  fixed_512_ol100__small__hybrid_a0.5.json  fixed_512_ol100__small__vector.json  semantic_t0.65_max10__large__bm25.json  semantic_t0.65_max10__large__hybrid_a0.5.json  semantic_t0.65_max10__large__vector.json  semantic_t0.65_max10__small__bm25.json  semantic_t0.65_max10__small__hybrid_a0.5.json  semantic_t0.65_max10__small__vector.json  sentence_5s_ol1__large__bm25.json  sentence_5s_ol1__large__hybrid_a0.5.json  sentence_5s_ol1__large__vector.json  sentence_5s_ol1__small__bm25.json  sentence_5s_ol1__small__hybrid_a0.5.json  sentence_5s_ol1__small__vector.json
notebooks/: rag_systematic_evals_tour.ipynb
scripts/: explore_results.py
src/: config.py  embedders.py  evaluator.py  grid_search.py  main.py  parsers.py  qa_generator.py  reranker.py  visualizer.py
tests/: test_config.py  test_embedders.py  test_evaluator.py  test_grid_search.py  test_main.py  test_parsers.py  test_qa_generator.py  test_visualizer.py
