[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-pipeline-systematic-evals"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "rag-common",
    "openai>=1.0",
    "pdfplumber>=0.10",
    "instructor>=1.0",
    "rich>=13.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "pydantic>=2.0",
    "tiktoken>=0.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.uv.sources]
rag-common = { path = "../rag_common", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
