[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-pipeline-systematic-evals"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "rag-common @ git+https://github.com/selizondo/rag-common.git",
    "openai>=1.0",
    "pdfplumber>=0.10",
    "instructor>=1.0",
    "rich>=13.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "pydantic>=2.0",
    "tiktoken>=0.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ipykernel>=6.0"]
reranking = ["sentence-transformers>=2.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "E501", "F401"]
"scripts/*.py" = ["E501"]
"src/evaluator.py" = ["E501"]
"src/main.py" = ["E501"]
"tests/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
constraint-dependencies = [
  "torch<2.3 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "transformers<5 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sentence-transformers<5 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "numpy<2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "scikit-learn<1.6 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
